<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreenCampus">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/visionbackground"
                android:text="GREEN CAMPUS"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="@string/gokarajgreencampus" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gokarajgreen1"
                    android:textColor="@color/white"
                    android:paddingLeft="5dp"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gokarajgreen2"
                    android:textColor="@color/white"
                    android:paddingLeft="5dp"
                    android:layout_marginBottom="5dp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gokarajgreen3"
                    android:textColor="@color/white"
                    android:paddingLeft="5dp"

                    />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>