<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutus">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/griet7"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="15dp"
                android:text="@string/gokarajubio"
                android:paddingBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:layout_margin="5dp"
                android:background="@color/visionbackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="VISION"
                android:textColor="@color/white"
                android:paddingLeft="5dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gokarajvision"
                android:paddingLeft="5dp"
                android:textColor="@color/white"
                android:paddingBottom="10dp"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/missionbackground"
                android:layout_margin="5dp"
                android:paddingBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MISSION"
                android:textColor="@color/white"
                android:paddingLeft="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gokarajmission"
                android:paddingLeft="5dp"
                android:textColor="@color/white"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:layout_margin="5dp"
                android:background="@color/visionbackground">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Quality Policy"
                    android:textColor="@color/white"
                    android:paddingLeft="5dp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gokarajquality"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:layout_margin="5dp"
                android:background="@color/missionbackground">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Strategies"
                    android:textColor="@color/white"
                    android:paddingLeft="5dp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gokarajstrategies"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"
                    />
            </LinearLayout>


        </LinearLayout>

</ScrollView>

</android.support.constraint.ConstraintLayout>